# drive-master-app

adminDashboard/: .env  app.py  app_local.py  run.bat
driving-school-platform/: .env.example  .gitignore  README.md
driving-school-platform/backend/: Dockerfile  Makefile  pyproject.toml
driving-school-platform/backend/app/: main.py
driving-school-platform/backend/app/api/: healthcheck.py
driving-school-platform/backend/app/api/v1/: dependencies.py
driving-school-platform/backend/app/api/v1/routes/: admin.py  auth.py  available_schools.py  booking.py  chat.py  instructor_actions.py  instructors.py  lessons.py  notifications.py  payments.py  progress.py  ratings.py  scheduling.py  schools.py  students.py
driving-school-platform/backend/app/api/v1/schemas/: auth.py  instructor.py  lesson.py  schedule.py  student.py
driving-school-platform/backend/app/core/: config.py  events.py  logging.py  security.py
driving-school-platform/backend/app/db/: mongo.py
driving-school-platform/backend/app/db/models/: booking.py  instructor.py  lesson.py  schedule.py  school.py  student.py
driving-school-platform/backend/app/db/seeds/: seed_instructors.py  seed_schools.py  seed_students.py
driving-school-platform/backend/app/services/: instructor_service.py  lesson_service.py  payment_service.py  schedule_service.py  student_service.py
driving-school-platform/backend/app/utils/: email_sender.py  jwt_handler.py  s3_upload.py  validation.py  validators.py
driving-school-platform/backend/requirements/: base.txt  dev.txt  prod.txt  test.txt
(+44 files in other folders)
